TA-759 fixes details margin on tablet

--- a/src/client/components/organisms/office-detail/office-detail.scss
+++ b/src/client/components/organisms/office-detail/office-detail.scss
@@ -20,6 +20,10 @@
   top: 20px;
   right: 10px;
   padding: 10px;
+  @include grid-media($sba-grid-medium) {
+    top: 30px;
+    right: 30px;
+  }
 
   img {
     display: block;
